# orkestra

./: .gitignore  SETUP.md  docker-compose.yml
.github/workflows/: release.yml
agent/: Cargo.toml
agent/src/: commands.rs  config.rs  main.rs  system.rs
scripts/: build-windows-exe.sh  install-mac.sh  install-raspi.sh  install-windows-exe.ps1  install-windows.ps1
server/: Dockerfile  package-lock.json  package.json  server.ts
server/app/: globals.css  layout.tsx
server/app/api/audio/: route.ts
server/app/api/command/: route.ts
server/app/api/dev-session/: route.ts
server/app/api/devices/: route.ts
server/app/api/proxy/: route.ts
server/app/api/sync/: route.ts
server/app/api/tunnel/: route.ts
server/app/components/: CommandLog.tsx  DeviceCard.tsx  OrchestraPanel.tsx
server/app/dashboard/: page.tsx
server/app/hooks/: useOrkestraWS.ts
server/lib/: db.ts  websocket-server.ts
server/prisma/: schema.prisma
server/prisma/migrations/20260507214059_init/: migration.sql
